# 486quake

./: Makefile  Makefile.NetBSD  Makefile.dos  Makefile.linux  Makefile.qmark  asm_i386.h  build_all.sh  cd_audio.c  cl_demo.c  common.mk  draw.c  flake.nix  host.c  r_main.c  readme.md  sound.h  sys_dos.c
mac/: CMakeLists.txt  readme.md
src/: asm_draw.h  asm_i386.h  cl_demo.c  cl_tent.c  d_edge.c  d_init.c  d_local.h  d_scan.c  d_vars.c  d_varsa.s  draw.c  host.c  math.s  mathlib.c  mathlib.h  model.c  model.h  quakeasm.h  quakedef.h  r_aclipa.s  r_bsp.c  r_edge.c  r_local.h  r_main.c  r_misc.c  r_shared.h  screen.c  screen.h  snd_dma.c  snd_mix.c  sound.h  sys_linux.c  sys_sun.c  vid_ext.c  vid_null.c  vid_vga.c  vid_wscons.c  view.c  worlda.s  zone.c
src/486/: d_draw.s  d_draw16.s  d_drawch.s  d_parta.s  d_polysa.s  d_scana.s  d_spr8.s  d_varsa.s  math.s  r_aclipa.s  r_aliasa.s  r_drawa.s  r_edgea.s  surf8.s  worlda.s
src/586/: d_draw.s  math.s
src/client/: cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c
src/cx4/: d_draw16.s  d_scana.s  d_spr8.s  inversetest.s  math.s  r_aclipa.s  r_aliasa.s
src/dos/: cd_audio.c  in_dos.c  net_bw.c  net_dos.c  net_ipx.c  net_mp.c  net_ser.c  snd_dos.c  snd_gus.c  sys_dos.c  sys_dosa.s  vid_dos.c  vid_ext.c  vid_vga.c  vregset.c
src/fpm/: FixedPointMath.c  FixedPointMath.h  d_scan.c  r_alias.c  r_fpm.h
src/null/: sys_null.c
src/qmark/: qm_fxch.s  qm_inter.s  qm_sys.c  qm_terje.s  qmark.h  readme.md
src/r_std/: d_edge.c  d_local.h  d_part.c  d_polyse.c  d_scan.c  d_sprite.c  d_surf.c  d_varsa.s  r_bsp.c  r_local.h  r_main.c  r_misc.c  renderer.mk
src/unix/: vid_x.c
(+14 files in other folders)
